[package]
name = "chlaty-lib-moviesapi"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3 
lto = true 
strip = false # Dynamic libloading will be bugged if set strip to `true`
codegen-units = 1

[dependencies]
html-escape = "0.2.13"
regex = "1.12.2"
reqwest = {version = "0.12.24", default-features = false, features = ["rustls-tls", "blocking", "json", "gzip", "brotli", "deflate"]}
serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.41"
url = "2.5.7"
urlencoding = "2.1.3"
visdom = "1.0.4"
cryptojs_rust = "0.1.4"
base64 = "0.22.1"

aes = "0.8"          
cbc = "0.1"          
md-5 = "0.10"        
rand = "0.9.2"         
rand_core = "0.9.2"
block-padding = "0.4.1"
cipher = "0.4.4"
